###  Changed - 劇場編集からスクリーン、オファーを編集可能へ変更

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,6 +197,13 @@ body {
   100% {
     transform: rotate(360deg); } }
 
+.json-editor h3,
+.json-editor th {
+  color: #000; }
+
+.json-editor .card {
+  overflow: auto; }
+
 .scheduler {
   margin: 0 auto;
   overflow: auto;
