--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -52,6 +52,9 @@
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
 
+    <!-- json editor -->
+    <script src="/node_modules/@json-editor/json-editor/dist/jsoneditor.min.js"></script>
+
     <script src="/js/master/common.js"></script>
 
     <%- defineContent('scripts') %>
