### Changed - ダッシュボードとプロジェクトホームを分離

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <%- contentFor('title') %>
-Dashboard
+Project Home
 <%- contentFor('displayId') %>
 DB-01
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-<script src="/js/dashboard.js"></script>
+<script src="/js/home.js"></script>
 
 <%- contentFor('body') %>
 
