--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -1,9 +1,9 @@
 <div class="sidebar-wrapper">
     <ul class="nav">
         <li class="nav-item <%= (displayId === 'DB-01') ? 'active': ''; %>">
-            <a class="nav-link" href="/">
-                <i class="material-icons">dashboard</i>
-                <p>Dashboard</p>
+            <a class="nav-link" href="/home">
+                <i class="material-icons">home</i>
+                <p>Home</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-12') ? 'active': ''; %>">
