--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -1,6 +1,6 @@
 <div class="sidebar-wrapper">
     <ul class="nav">
-        <li class="nav-item <%= (displayId === 'DB-01') ? 'active': ''; %>">
+        <li class="nav-item <%= (displayId === 'HO-01') ? 'active': ''; %>">
             <a class="nav-link" href="/home">
                 <i class="material-icons">home</i>
                 <p>Home</p>
