--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@ HO-01
             </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
+            <!-- <div class="card card-stats">
                 <div class="card-header card-header-success card-header-icon">
                     <div class="card-icon">
                         <i class="material-icons">event_seat</i>
@@ -44,7 +44,7 @@ HO-01
                         <i class="material-icons">search</i> <a target="_blank" href="/reservations">すべて見る</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card card-stats">
