### Changed - ページネーション調整

--- a/views/accountTitles/accountTitleSet/index.ejs
+++ b/views/accountTitles/accountTitleSet/index.ejs
@@ -58,9 +58,9 @@ AT-06
 
 <div class="col-sm-12 form-container search">
     <div>
-        <p id="searchedCount" style="display:none;">
+        <!-- <p id="searchedCount" style="display:none;">
             検索結果 $searched_count$件
-        </p>
+        </p> -->
     </div>
     <div id="list" class="table-responsive" style="display:none;">
         <table class="table table-bordered table-striped">
