--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -84,9 +84,9 @@ Aa-10
 </div>
 
 <div class="form-container search">
-    <p class="mb-3" id="searchedCount" style="display:none;">
+    <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果 $searched_count$件
-    </p>
+    </p> -->
     <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
         <table class="table table-bordered table-striped mb-0">
             <thead>
