--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -73,9 +73,9 @@ AT-01
 </div>
 
 <div class="form-container search">
-    <p class="mb-3" id="searchedCount" style="display:none;">
+    <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果 $searched_count$件
-    </p>
+    </p> -->
     <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
         <table class="table table-bordered table-striped mb-0">
             <thead>
