--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -52,9 +52,9 @@ Aa-17
 
 <div class="form-container search">
     <div>
-        <p class="mb-3" id="searchedCount" style="display:none;">
+        <!-- <p class="mb-3" id="searchedCount" style="display:none;">
             検索結果 $searched_count$件
-        </p>
+        </p> -->
     </div>
     <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
         <table class="table table-bordered table-striped mb-0">
