--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -49,9 +49,9 @@ Aa-8
 </div>
 <% /* 一覧 */ %>
 <div class="form-container search">
-    <p class="mb-3" id="searchedCount" style="display:none;">
+    <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果$searched_count$件
-    </p>
+    </p> -->
     <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
         <table class="table table-bordered table-striped mb-0">
             <thead>
