### Changed - ページネーション調整

--- a/views/accountTitles/accountTitleCategory/index.ejs
+++ b/views/accountTitles/accountTitleCategory/index.ejs
@@ -42,6 +42,8 @@ AT-05
 
 <div class="col-sm-12 form-container search">
     <div>
+        <p id="resultStats" style="display:none;">
+        </p>
         <!-- <p id="searchedCount" style="display:none;">
             検索結果 $searched_count$件
         </p> -->
