--- a/views/home.ejs
+++ b/views/home.ejs
@@ -63,7 +63,7 @@ HO-01
             </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="card card-stats">
+            <!-- <div class="card card-stats">
                 <div class="card-header card-header-info card-header-icon">
                     <div class="card-icon">
                         <i class="fa fa-tasks"></i>
@@ -73,10 +73,9 @@ HO-01
                 </div>
                 <div class="card-footer">
                     <div class="stats">
-                        <!-- <i class="material-icons">update</i> Just Updated -->
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
