--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -52,6 +52,8 @@ Aa-17
 
 <div class="form-container search">
     <div>
+        <p id="resultStats" style="display:none;">
+        </p>
         <!-- <p class="mb-3" id="searchedCount" style="display:none;">
             検索結果 $searched_count$件
         </p> -->
