--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -117,6 +117,8 @@ Aa-6
 </div>
 <% /* 一覧 */ %>
 <div class="form-container search">
+    <p id="resultStats" style="display:none;">
+    </p>
     <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果$searched_count$件
     </p> -->
