--- a/views/accountTitles/accountTitleSet/index.ejs
+++ b/views/accountTitles/accountTitleSet/index.ejs
@@ -58,6 +58,8 @@ AT-06
 
 <div class="col-sm-12 form-container search">
     <div>
+        <p id="resultStats" style="display:none;">
+        </p>
         <!-- <p id="searchedCount" style="display:none;">
             検索結果 $searched_count$件
         </p> -->
