--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -73,6 +73,8 @@ AT-01
 </div>
 
 <div class="form-container search">
+    <p id="resultStats" style="display:none;">
+    </p>
     <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果 $searched_count$件
     </p> -->
