--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -84,6 +84,8 @@ Aa-10
 </div>
 
 <div class="form-container search">
+    <p id="resultStats" style="display:none;">
+    </p>
     <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果 $searched_count$件
     </p> -->
