--- a/views/productOffers/index.ejs
+++ b/views/productOffers/index.ejs
@@ -82,6 +82,8 @@ PO-01
 </div>
 
 <div class="form-container search">
+    <p id="resultStats" style="display:none;">
+    </p>
     <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果$searched_count$件
     </p> -->
