--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -208,8 +208,11 @@ Aa-11
 </div>
 <div class="form-container search">
     <div>
-        <p class="mb-3" id="searchedCount" style="display:none;">
+        <p id="resultStats" style="display:none;">
         </p>
+        <!-- <p class="mb-3" id="searchedCount" style="display:none;">
+            検索結果 $searched_count$件
+        </p> -->
     </div>
     <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
         <table class="table table-bordered table-striped mb-0">
