--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -24,9 +24,30 @@ PS-02
             </label>
             <select class="form-control" name="typeOf">
                 <option value="" selected>選択してください</option>
-                <% Object.values(PriceSpecificationType).forEach((type) => { %>
-                <option value="<%= type %>">
-                    <%= type %>
+                <option value="<%= PriceSpecificationType.CategoryCodeChargeSpecification %>">
+                    <%= PriceSpecificationType.CategoryCodeChargeSpecification %></option>
+                <option value="<%= PriceSpecificationType.MovieTicketTypeChargeSpecification %>">
+                    <%= PriceSpecificationType.MovieTicketTypeChargeSpecification %></option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="appliesToCategoryCode" class="">
+                適用カテゴリー
+            </label>
+            <select class="form-control" name="appliesToCategoryCode">
+                <option value="">選択してください</option>
+                <% Object.values(VideoFormatType).forEach((type) => { %>
+                <option
+                    value="<%= JSON.stringify({codeValue: type, inCodeSet:{identifier:CategorySetIdentifier.VideoFormatType}}) %>">
+                    <%= CategorySetIdentifier.VideoFormatType %> <%= type %>
+                </option>
+                <% }) %>
+
+                <% Object.values(SoundFormatType).forEach((type) => { %>
+                <option
+                    value="<%= JSON.stringify({codeValue: type, inCodeSet:{identifier:CategorySetIdentifier.SoundFormatType}}) %>">
+                    <%= CategorySetIdentifier.SoundFormatType %> <%= type %>
                 </option>
                 <% }) %>
             </select>
@@ -37,38 +58,10 @@ PS-02
                 適用ムビチケ券種区分
             </label>
             <select class="form-control" name="appliesToMovieTicketType">
-                <option value="" selected>選択してください</option>
+                <option value="">選択してください</option>
                 <% Object.values(MovieTicketType).forEach((type) => { %>
                 <option value="<%= type.code %>">
                     <%= type.code %> <%= type.name %>
-                </option>
-                <% }) %>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="appliesToVideoFormat" class="">
-                適用上映方式
-            </label>
-            <select class="form-control" name="appliesToVideoFormat">
-                <option value="" selected>選択してください</option>
-                <% Object.values(VideoFormatType).forEach((type) => { %>
-                <option value="<%= type %>">
-                    <%= type %>
-                </option>
-                <% }) %>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="appliesToSoundFormat" class="">
-                適用音響方式
-            </label>
-            <select class="form-control" name="appliesToSoundFormat">
-                <option value="" selected>選択してください</option>
-                <% Object.values(SoundFormatType).forEach((type) => { %>
-                <option value="<%= type %>">
-                    <%= type %>
                 </option>
                 <% }) %>
             </select>
@@ -95,8 +88,7 @@ PS-02
             <thead>
                 <tr>
                     <th>価格仕様タイプ</th>
-                    <th>適用上映方式</th>
-                    <th>適用音響方式</th>
+                    <th>適用カテゴリー</th>
                     <th>適用ムビチケ券種区分</th>
                     <th>金額</th>
                 </tr>
@@ -106,10 +98,11 @@ PS-02
                     <td name="id__typeOf">
                         <a target="_blank" href="/priceSpecifications/$id$/update">$typeOf$</a>
                     </td>
-                    <td name="appliesToVideoFormat">$appliesToVideoFormat$</td>
-                    <td name="appliesToSoundFormat">$appliesToSoundFormat$</td>
-                    <td name="appliesToMovieTicketType__appliesToMovieTicket.name">
-                        $appliesToMovieTicketType$ $appliesToMovieTicket.name$
+                    <td name="appliesToCategoryCode.inCodeSet.identifier__appliesToCategoryCode.codeValue">
+                        $appliesToCategoryCode.inCodeSet.identifier$
+                        $appliesToCategoryCode.codeValue$</td>
+                    <td name="appliesToMovieTicketType__appliesToMovieTicket.name__appliesToVideoFormat">
+                        $appliesToMovieTicketType$ $appliesToMovieTicket.name$<br>$appliesToVideoFormat$
                     </td>
                     <td name="price__priceCurrency">$price$ $priceCurrency$</td>
                 </tr>
