--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -23,13 +23,38 @@ CC-00
                 区分分類
             </label>
             <select class="form-control" name="inCodeSet[identifier]">
-                <option value="" selected>選択してください</option>
-                <% Object.values(CategorySetIdentifier).forEach((type) => { %>
-                <option value="<%= type %>">
-                    <%= type %>
+                <option value="" selected>未選択</option>
+                <option value="<%= CategorySetIdentifier.ServiceType%>">
+                    興行区分
                 </option>
-                <% }) %>
+                <option value="<%= CategorySetIdentifier.VideoFormatType%>">
+                    上映方式タイプ
+                </option>
+                <option value="<%= CategorySetIdentifier.SoundFormatType%>">
+                    音響方式タイプ
+                </option>
+                <option value="<%= CategorySetIdentifier.SeatingType%>">
+                    座席タイプ
+                </option>
+                <option value="<%= CategorySetIdentifier.MovieTicketType%>">
+                    ムビチケ券種区分
+                </option>
             </select>
+        </div>
+
+        <div class="form-group">
+            <label for="codeValue[$eq]" class="">
+                区分コード
+            </label>
+            <input type="text" class="form-control" name="codeValue[$eq]" id="codeValue[$eq]" placeholder=""
+                maxlength=64 value="">
+        </div>
+
+        <div class="form-group">
+            <label for="name[$regex]" class="">
+                名称
+            </label>
+            <input class="form-control" name="name[$regex]" id="name[$regex]" placeholder="" maxlength=64 value="">
         </div>
 
         <div class="panel-body">
