--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -60,6 +60,12 @@
                 <p>価格仕様 <span class="badge badge-secondary badge-light">Preview</span></p>
             </a>
         </li>
+        <li class="nav-item <%= (displayId === 'CC-00') ? 'active': ''; %>">
+            <a class="nav-link" href="/categoryCodes">
+                <i class="icon fa fa-dollar-sign"></i>
+                <p>各種区分 <span class="badge badge-secondary badge-light">Preview</span></p>
+            </a>
+        </li>
 
         <% if (process.env.USE_OFFER_ADD_ON === '1') { %>
         <li class="nav-item <%= (displayId === 'PO-01') ? 'active': ''; %>">
