--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -68,7 +68,7 @@ Aa-8
                 <tr id="templateRow" _id="$id$">
                     <td name="identifier">$identifier$</td>
                     <td name="name.ja">$name.ja$</td>
-                    <td name="itemOffered.serviceType.id">$itemOffered.serviceType.id$</td>
+                    <td name="itemOffered.serviceType.codeValue">$itemOffered.serviceType.codeValue$</td>
                     <td name="id__id__id" class="center">
                         <div class="text-center">
                             <a target="_blank" class="btn btn-sm btn-sm btn-primary"
