### Changed - サービスタイプをカテゴリーコードに統合

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -62,7 +62,7 @@
         </li>
         <li class="nav-item <%= (displayId === 'CC-00') ? 'active': ''; %>">
             <a class="nav-link" href="/categoryCodes">
-                <i class="icon fa fa-dollar-sign"></i>
+                <i class="icon fa fa fa-table"></i>
                 <p>各種区分 <span class="badge badge-secondary badge-light">Preview</span></p>
             </a>
         </li>
