--- a/views/ticketTypeGroup/form.ejs
+++ b/views/ticketTypeGroup/form.ejs
@@ -110,7 +110,7 @@
             <%= serviceType.name %>
         </option>
         <% } else { %>
-        <option value="<%= serviceType.id %>">
+        <option value="<%= serviceType.codeValue %>">
             <%= serviceType.name %>
         </option>
         <% } %>
