--- a/views/categoryCodes/new.ejs
+++ b/views/categoryCodes/new.ejs
@@ -16,7 +16,7 @@ PS-01
             <%- include('../common/successMessage') %>
         </div>
 
-        <%- include('form', { forms: forms }) %>
+        <%- include('form', { forms: forms, isNew: true }) %>
 
         <% /* 登録ボタン */ %>
         <div class="btn-area panel-body">
