--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -25,7 +25,7 @@ CC-00
             <select class="form-control" name="inCodeSet[identifier]">
                 <option value="" selected>未選択</option>
                 <option value="<%= CategorySetIdentifier.ServiceType%>">
-                    興行タイプ
+                    興行区分
                 </option>
                 <option value="<%= CategorySetIdentifier.VideoFormatType%>">
                     上映方式タイプ
