--- a/views/serviceTypes/edit.ejs
+++ b/views/serviceTypes/edit.ejs
@@ -20,8 +20,8 @@ Aa-16
             <label class="">
                 興行区分コード
             </label>
-            <input readonly type="text" class="form-control" name="identifier" id="identifier" placeholder=""
-                maxlength=64 value="<%= forms.identifier %>">
+            <input readonly type="text" class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
+                value="<%= forms.codeValue %>">
         </div>
 
         <% /* 登録・更新共通部 */ %>
