--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -24,10 +24,10 @@ Aa-17
         </div>
 
         <div class="form-group">
-            <label for="identifier" class="">
+            <label for="codeValue" class="">
                 興行区分コード
             </label>
-            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
+            <input type="text" class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
                 value="">
         </div>
 
@@ -69,7 +69,7 @@ Aa-17
             </thead>
             <tbody>
                 <tr id="templateRow" identifier="$id$">
-                    <td name="identifier">$identifier$</td>
+                    <td name="codeValue">$codeValue$</td>
                     <td name="name">
                         $name$
                     </td>
