--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -259,10 +259,11 @@
     </label>
     <select class="form-control" name="appliesToMovieTicketType">
         <option value="" disabled selected>選択してください</option>
-        <% Object.values(MovieTicketType).forEach((type) => { %>
-        <option value="<%= type.code %>" <% if (type.code === forms.priceSpecification.appliesToMovieTicketType) { %>
+        <% Object.values(movieTicketTypes).forEach((movieTicketType) => { %>
+        <option value="<%= movieTicketType.codeValue %>"
+            <% if (movieTicketType.codeValue === forms.priceSpecification.appliesToMovieTicketType) { %>
             selected<% } %>>
-            <%= type.code %> <%= type.name %>
+            <%= movieTicketType.codeValue %> <%= movieTicketType.name.ja %>
         </option>
         <% }) %>
     </select>
