--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -66,9 +66,9 @@ PS-02
             </label>
             <select class="form-control" name="appliesToMovieTicketType">
                 <option value="">選択してください</option>
-                <% Object.values(MovieTicketType).forEach((type) => { %>
-                <option value="<%= type.code %>">
-                    <%= type.code %> <%= type.name %>
+                <% Object.values(movieTicketTypes).forEach((movieTicketType) => { %>
+                <option value="<%= movieTicketType.codeValue %>">
+                    <%= movieTicketType.codeValue %> <%= movieTicketType.name.ja %>
                 </option>
                 <% }) %>
             </select>
