--- a/views/categoryCodes/form.ejs
+++ b/views/categoryCodes/form.ejs
@@ -11,6 +11,10 @@
             && forms.inCodeSet.identifier === CategorySetIdentifier.ServiceType) { %> selected<% } %>>
             興行区分
         </option>
+        <option value="<%= CategorySetIdentifier.DistributorType %>" <% if (forms.inCodeSet !== undefined
+            && forms.inCodeSet.identifier === CategorySetIdentifier.DistributorType) { %> selected<% } %>>
+            配給区分
+        </option>
         <option value="<%= CategorySetIdentifier.VideoFormatType %>" <% if (forms.inCodeSet !== undefined
             && forms.inCodeSet.identifier === CategorySetIdentifier.VideoFormatType) { %> selected<% } %>>
             上映方式タイプ
