--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -27,6 +27,9 @@ CC-00
                 <option value="<%= CategorySetIdentifier.ServiceType%>">
                     興行区分
                 </option>
+                <option value="<%= CategorySetIdentifier.DistributorType%>">
+                    配給区分
+                </option>
                 <option value="<%= CategorySetIdentifier.VideoFormatType%>">
                     上映方式タイプ
                 </option>
