### Changed - メニューアイコン調整

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -20,25 +20,25 @@
         </li>
         <li class="nav-item <%= (displayId === 'Aa-3') ? 'active': ''; %>">
             <a class="nav-link" href="/events/screeningEventSeries">
-                <i class="material-icons">event</i>
+                <i class="icon far fa-calendar"></i>
                 <p>劇場上映作品</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-4') ? 'active': ''; %>">
             <a class="nav-link" href="/events/screeningEvent">
-                <i class="material-icons">event</i>
+                <i class="icon far fa-calendar-alt"></i>
                 <p>スケジュール</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-6') ? 'active': ''; %>">
             <a class="nav-link" href="/ticketTypes">
-                <i class="material-icons">local_offer</i>
+                <i class="icon fa fa-tag"></i>
                 <p>券種</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-8') ? 'active': ''; %>">
             <a class="nav-link" href="/ticketTypeGroups">
-                <i class="material-icons">local_offer</i>
+                <i class="icon fa fa-tags"></i>
                 <p>券種グループ</p>
             </a>
         </li>
@@ -50,13 +50,13 @@
         </li> -->
         <li class="nav-item <%= (displayId === 'Aa-17') ? 'active': ''; %>">
             <a class="nav-link" href="/serviceTypes">
-                <i class="icon fa fa-table"></i>
+                <i class="material-icons">category</i>
                 <p>興行区分</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'CC-00') ? 'active': ''; %>">
             <a class="nav-link" href="/categoryCodes">
-                <i class="icon fa fa fa-table"></i>
+                <i class="material-icons">category</i>
                 <p>各種区分 <span class="badge badge-secondary badge-light">Preview</span></p>
             </a>
         </li>
